force-app/main/default/objects/Data_Table_Content__mdt/Data_Table_Content__mdt.object-meta.xml
<CustomObject>
    <label>Data Table Content</label>
    <pluralLabel>Data Table Content</pluralLabel>
</CustomObject>