force-app/main/default/objects/Data_Table_Content__mdt/fields/Column_Width__c.field-meta.xml
<CustomField>
    <fullName>Column_Width__c</fullName>
    <label>Column Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>