force-app/main/default/objects/Data_Table_Content__mdt/fields/Data_Table__c.field-meta.xml
<CustomField>
    <fullName>Data_Table__c</fullName>
    <label>Data Table</label>
    <referenceTo>Data_Table__mdt</referenceTo>
    <relationshipLabel>Data Table Content</relationshipLabel>
    <relationshipName>Data_Table_Content</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>