force-app/main/default/objects/Data_Table_Content__mdt/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>