force-app/main/default/objects/Data_Table_Content__mdt/fields/URL_Label_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_Label_Field_API_Name__c</fullName>
    <label>URL Label Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>