force-app/main/default/objects/Data_Table_Content__mdt/listViews/PAN_Applicants.listView-meta.xml
<ListView>
    <fullName>PAN_Applicants</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Data_Table__c</columns>
    <columns>Sequence__c</columns>
    <columns>DataType__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>URL_Label_Field_API_Name__c</columns>
    <columns>URL_Target_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_Table__c</field>
        <operation>equals</operation>
        <value>PAN_Applicants</value>
    </filters>
    <label>PAN Applicants</label>
</ListView>