force-app/main/default/objects/Data_Table_Content__mdt/listViews/Vehicle.listView-meta.xml
<ListView>
    <fullName>Vehicle</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Sequence__c</columns>
    <columns>Data_Table__c</columns>
    <columns>DataType__c</columns>
    <columns>Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_Table__c</field>
        <operation>contains</operation>
        <value>Vehicle_Records</value>
    </filters>
    <label>Vehicle</label>
</ListView>